src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dwF1000-dhP0.5-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault column width: F1000\ndefault window height: P0.5\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1240 × 328, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 328, bounds: 1240 × 680, states: []
size: 1240 × 328, bounds: 1240 × 680, states: [Activated]
